# simframes

./: LICENSE  README.md
cmake_pure/: CMakeLists.txt
include/: SimFrames.h
include/Core/: SimCommon.h  SimContainer.h  SimFrames.h  SimGrid.h  SimLock.h  SimTab.h  SimWidget.h  SimWindow.h
include/Data/: SimDataMapping.h  SimDataObject.h  SimDataStorage.h
include/Extra/: SimRelayPanel.h
include/Widgets/: SimLabel.h  SimNumericInput.h  SimRelay.h  SimSlider.h  SimTextArea.h
src/Core/: SimContainer.cpp  SimGrid.cpp  SimTab.cpp  SimWidget.cpp  SimWindow.cpp
src/Data/: SimDataMapping.cpp  SimDataObject.cpp  SimDataStorage.cpp
src/Extra/: SimRelayPanel.cpp
src/Widgets/: SimLabel.cpp  SimNumericInput.cpp  SimRelay.cpp  SimSlider.cpp  SimTextArea.cpp
